# opengl_task_2020

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: MacroUtils.cmake
task2/692Pakulina/: CMakeLists.txt  Main.cpp
task2/692Pakulina/692PakulinaData2/: coordinates.txt  marker.frag  shader.frag  shader.vert
task2/692Pakulina/common/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Common.h  DebugOutput.cpp  DebugOutput.h  LightInfo.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
